# lekh_ai

./: .env.example  .env.example-dev  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/agent/: graph.py  state.py
backend/agent/agents/: architect.py  brainstormer.py  character_smith.py  prose_weaver.py
backend/agent/tools/: knowledge_graph.py  user_interaction.py
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/api/endpoints/: stories.py
backend/app/core/: config.py  security.py
backend/app/db/: supabase_handler.py
backend/app/services/: celery_app.py  story_runner.py
backend/app/websocket/: callback.py  manager.py
frontend/: Dockerfile.dev  package-lock.json  package.json  remix.config.js  tsconfig.json  vite.config.ts
frontend/app/: root.tsx
frontend/app/components/chat/: AgentActivityFeed.tsx  AgentStep.tsx  ChatInputForm.tsx
frontend/app/components/layout/: AppLayout.tsx  Header.tsx
frontend/app/components/ui/: checkbox.tsx  dialog.tsx  dropdown-menu.tsx  tabs.tsx
frontend/app/lib/: api.ts  supabase.ts
frontend/app/lib/hooks/: useWebSocket.ts
frontend/app/lib/state/: store.ts
frontend/app/routes/: _app._index.tsx  _auth.callback.tsx  _auth.login.tsx
instructions/: agent_layer.md  backend_layer.md  frontend_layer.md
